fixing em dash to en dash for copyright year, adding small spacing in footer

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -39,7 +39,7 @@
 
   .last-updated {
     text-align: center;
-    margin: 0;
+    margin: 3px 0;
     font-size: 12px;
   }
 }
